--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/sitemap": "^3.4.1",
     "@astrojs/tailwind": "^6.0.2",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.9.3",
     "tailwindcss": "^3.4.17"
   }
